Use Constructor.newInstance instead of Class.newInstance